[gd_scene load_steps=34 format=3 uid="uid://brp2jc8wyno6o"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_yx70c"]
[ext_resource type="PackedScene" uid="uid://cvcbvcyjgrkij" path="res://Weapons/melee_weapon.tscn" id="2_ddj2p"]

[ext_resource type="Script" path="res://Weapons/melee_weapon.gd" id="3_qsq6h"]


[sub_resource type="CapsuleMesh" id="CapsuleMesh_1atrx"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_f727m"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_m261t"]
resource_name = "Fireball"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946), Vector3(0.241, -0.17, -0.4), Vector3(0.241, -0.17, -0.4), Vector3(0.241, -0.17, -0.1), Vector3(0.241, -0.17, -0.4), Vector3(0.241, -0.17, -0.4), Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872664), Vector3(-1.39626, 0, 0), Vector3(-1.39626, 0, 0), Vector3(-1.39626, 0, 0), Vector3(-0.174533, 0, 0.0872664)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shootFire"
}]
}

[sub_resource type="Animation" id="Animation_d0eun"]
resource_name = "Idle"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946), Vector3(0.241, -0.13, -0.51), Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872665), Vector3(-0.169297, 0.0872665, 0.0837758), Vector3(-0.171042, 0.0436332, 0.0837758), Vector3(-0.169297, 0.0872665, 0.0837758), Vector3(-0.174533, 0, 0.0872665)]
}

[sub_resource type="Animation" id="Animation_5yfi8"]
resource_name = "Jump"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946), Vector3(0.241, -0.05, -0.516), Vector3(0.241, -0.05, -0.516), Vector3(0.241, -0.1, -0.516), Vector3(0.241, -0.17, -0.516), Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872664), Vector3(-0.0349066, 0, 0.0523599), Vector3(-0.0349066, 0, 0.0523599), Vector3(-0.0872665, 0, 0.0575959), Vector3(-0.174533, 0, 0.0872664), Vector3(-0.174533, 0, 0.0872664)]
}

[sub_resource type="Animation" id="Animation_r7nwp"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872665)]
}

[sub_resource type="Animation" id="Animation_46lt3"]
resource_name = "Swing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946), Vector3(0.4, -0.4, -0.6), Vector3(-0.5, -0.4, -0.6), Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872664), Vector3(-1.39626, 0, -1.0472), Vector3(-1.39626, 0.349066, 0.872665), Vector3(-0.174533, 0, 0.0872664)]
}

[sub_resource type="Animation" id="Animation_wt51i"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.240697, -0.146171, -0.515946), Vector3(0.28, -0.13, -0.516), Vector3(0.241, -0.135, -0.516), Vector3(0.2, -0.159, -0.516), Vector3(0.240697, -0.146171, -0.515946)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.174533, 0, 0.0872664), Vector3(-0.164061, 0.0349066, 0.0436332), Vector3(-0.174533, 0.0174533, 0.0872665), Vector3(-0.185005, 0.0349066, 0.1309), Vector3(-0.174533, 0, 0.0872664)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_esyxs"]
_data = {
"Fireball": SubResource("Animation_m261t"),
"Idle": SubResource("Animation_d0eun"),
"Jump": SubResource("Animation_5yfi8"),
"RESET": SubResource("Animation_r7nwp"),
"Swing": SubResource("Animation_46lt3"),
"Walk": SubResource("Animation_wt51i")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yhkmp"]
animation = &"Fireball"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gb0xa"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_masvi"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sbnt1"]
animation = &"Swing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qeadl"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3gwc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_epklh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6q7i7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fyqy2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7inxj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i88d4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1rj8c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q4pig"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8pcmd"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1arxc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ri4sq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ftwcr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2oe6d"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dvwta"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n6akl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_md5tu"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_70frj"]
states/End/position = Vector2(872, 154)
states/Fireball/node = SubResource("AnimationNodeAnimation_yhkmp")
states/Fireball/position = Vector2(595, 309)
states/Idle/node = SubResource("AnimationNodeAnimation_gb0xa")
states/Idle/position = Vector2(294, 154)
states/Jump/node = SubResource("AnimationNodeAnimation_masvi")
states/Jump/position = Vector2(418, 309)
states/Start/position = Vector2(156, 154)
states/Swing/node = SubResource("AnimationNodeAnimation_sbnt1")
states/Swing/position = Vector2(595, 23)
states/Walk/node = SubResource("AnimationNodeAnimation_qeadl")
states/Walk/position = Vector2(418, 23)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_t3gwc"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_epklh"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_6q7i7"), "Idle", "Swing", SubResource("AnimationNodeStateMachineTransition_fyqy2"), "Swing", "Idle", SubResource("AnimationNodeStateMachineTransition_7inxj"), "Walk", "Swing", SubResource("AnimationNodeStateMachineTransition_i88d4"), "Swing", "Walk", SubResource("AnimationNodeStateMachineTransition_1rj8c"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_q4pig"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_8pcmd"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_1arxc"), "Jump", "Swing", SubResource("AnimationNodeStateMachineTransition_ri4sq"), "Idle", "Fireball", SubResource("AnimationNodeStateMachineTransition_ftwcr"), "Fireball", "Idle", SubResource("AnimationNodeStateMachineTransition_2oe6d"), "Fireball", "Walk", SubResource("AnimationNodeStateMachineTransition_dvwta"), "Walk", "Fireball", SubResource("AnimationNodeStateMachineTransition_n6akl"), "Jump", "Fireball", SubResource("AnimationNodeStateMachineTransition_md5tu")]
graph_offset = Vector2(63, 75.187)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_yx70c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_1atrx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_f727m")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.697116, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]

[node name="Focus" type="Area3D" parent="Neck/Camera3D"]

[node name="Focus2" type="Area3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="MeleeWeapon" parent="Neck/Camera3D" instance=ExtResource("2_ddj2p")]
transform = Transform3D(0.996195, -0.0871556, 0, 0.0858317, 0.981059, 0.173648, -0.0151345, -0.172987, 0.984806, 0.240697, -0.146171, -0.515946)
script = ExtResource("3_qsq6h")

[node name="MeleeAnimations" type="AnimationPlayer" parent="Neck/Camera3D/MeleeWeapon"]
libraries = {
"": SubResource("AnimationLibrary_esyxs")
}

[node name="PlayerStates" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_70frj")
anim_player = NodePath("../Neck/Camera3D/MeleeWeapon/MeleeAnimations")
active = true

[connection signal="animation_finished" from="PlayerStates" to="." method="_on_player_states_animation_finished"]
